Don't autoload tests in dev

--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,12 @@
     },
     "autoload": {
         "psr-4": {
-            "Mlo\\ObjectMapper\\": "src",
-            "Mlo\\ObjectMapper\\Tests\\": "tests"
+            "Mlo\\ObjectMapper\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Mlo\\ObjectMapper\\Tests\\": "tests/"
         }
     }
 }
